--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
+<!DOCTYPE html>
 <html>
-
-<body>
-  <h1>Loki-Bardh</h1>
-  <p>Welcome, everybody has to start somewhere!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
-
+  <body>
+    <h1>Loki-Bardh</h1>
+    <p>Welcome, everybody has to start somewhere!</p>
+    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  </body>
 </html>
